<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kdl_ik_service</name>
  <version>0.7.0</version>
  <description>KDL Based IK solver</description>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <maintainer email="amar@uni-bremen.de">Amar Fayaz</maintainer>
  <author>Gayane Kazhoyan</author>
  <author>Amar Fayaz</author>
  <license>BSD</license>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python_orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pykdl</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>1
  </export>
</package>
